--- a/app/views/stories/edit.html.erb
+++ b/app/views/stories/edit.html.erb
@@ -1,5 +1,4 @@
-<h1>Editing Story</h1>
-
+<h1 class="value--margin">Редактировать статью</h1>
 <%= render 'form', story: @story %>
 
 <%= link_to 'Show', @story %> |
