--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,14 +1,13 @@
 <%= react_component 'A_PreviewAccount' %>
-<% if user_signed_in? && @user.id == current_user.id %>
-	<p><%= link_to 'Edit profile', edit_user_registration_path %></p>
-<% end %>
-<div class="user--account">
-<%= react_component 'M_AccountCard', {current_user: current_user} %>
-<%= link_to 'Sign Out', destroy_user_session_path, method: :delete %>
-<div class="user--posts">
-  <%= react_component 'O_MyPosts', {posts: @posts, categories: @categories, comments: @comments} %>
-</div>
-</div>
-<div class="my--posts">
 
+
+<div class="user--account">
+	<%= render "users/usercard" %>
+<div class="user--posts">
+	<% if @user.posts.count == 0%>
+	<%= render "users/whithoutposts" %>
+<% else %>
+<%= react_component 'O_MyPosts', {posts: @posts, categories: @categories, comments: @comments} %>
+<% end %>
+</div>
 </div>
