--- a/app/views/stories/_form.html.erb
+++ b/app/views/stories/_form.html.erb
@@ -36,7 +36,7 @@
   </div>
 
   <div class="actions">
-    <%= form.submit 'Создать статью', :class => 'submit_reg' %>
+    <%= form.submit 'Создать статью', :class => 'submit_reg--story' %>
   </div>
 <% end %>
 </div>
