--- a/app/assets/stylesheets/registration.scss
+++ b/app/assets/stylesheets/registration.scss
@@ -1,5 +1,5 @@
 .reg_image {
-  width: 38%;
+  width: 47%;
   position: static;
   background-image: url('RegistrationImage.png');
   height: 100vh;
@@ -13,8 +13,36 @@
   font-size: 30px;
   font-weight: 500;
 }
+.login {
+  margin-top: 200px;
+  text-align: center;
+  font-size: 30px;
+  font-weight: 500;
+}
 .reg--text {
   text-align: center;
+}
+.submit_registration {
+  width: 100%;
+    height: 40px;
+    color: white;
+    border: 1px solid #284941;
+    background: #284941;
+    border-radius: 40px;
+    font-size: 16px;
+}
+.links--log {
+  display: grid;
+  justify-content: center;
+}
+.sign_in {
+  width: 100%;
+    height: 40px;
+    color: white;
+    border: 1px solid #284941;
+    background: #284941;
+    border-radius: 40px;
+    font-size: 16px;
 }
 .reg_info {
   width: 73%;
