--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -27,6 +27,17 @@
   display: flex;
   margin: 0 auto;
 }
+.submit_reg--story {
+  height:50px;
+  margin-top: 15px;
+  color: white;
+  border-radius: 30px;
+  width: 30%;
+  font-size: 20px;
+  font-weight: 300;
+  border: 1px solid white;
+  background: #284941;
+}
 .p--notification {
   font-weight: 500;
   font-size: 16px;
